# CyberDropDownloader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  cyberdrop_dl.profiling  pyproject.toml  supported_sites.md  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  new_site_request.yml
.github/workflows/: apprise.yml  ci-uv.yaml  ci.yaml  ci.yml  ci_lowest_deps.yml  codeql-analysis.yml  create_release.yaml  publish-to-pypi.yaml  publish.yml  ruff.yaml  smoke.yaml
cyberdrop_dl/: __init__.py  cache.py  cached_session.py  compat.py  constants.py  director.py  dot_dict.py  env.py  exceptions.py  main.py  profiling.py  types.py
cyberdrop_dl/clients/: client.py  download_client.py  errors.py  flaresolverr.py  hash_client.py  request_client.py  response.py  responses.py  scraper_client.py
cyberdrop_dl/clients/http/: __init__.py  check.py  download_client.py  downloader.py  scraper_client.py
cyberdrop_dl/config/: __init__.py  _common.py  auth_config.py  auth_model.py  auth_settings.py  config.py  config_model.py  config_settings.py  global_config.py  global_model.py  global_settings.py  paths.py
cyberdrop_dl/config_definitions/: __init__.py  authentication_settings.py  config_settings.py  custom_types.py  global_settings.py
cyberdrop_dl/config_definitions/custom/: converters.py  types.py  validators.py
cyberdrop_dl/config_definitions/pydantic/: custom_types.py  validators.py
cyberdrop_dl/crawlers/: __init__.py  _chevereto.py  _chibisafe.py  _forum.py  _kemono_base.py  _kvs.py  _metadata.py  _one_manager.py  _yetishare.py  acidimg.py  archivebate.py  ashemaletube.py  beeg.py  bellazon_crawler.py  bestprettygirl.py  box_dot_com.py  bunkrr.py  bunkrr_albums_io.py  buzzheavier.py  camwhores_dot_tv.py  catbox.py  chevereto.py  cloudflare_stream.py  coomer.py  crawler.py  cyberdrop.py  cyberfile.py  dirtyship.py  discord.py  doodstream.py  dropbox.py  e621.py  efukt.py  ehentai.py  ehentai_crawler.py  eightmuses.py  eightmuses_crawler.py  eporner.py  erome.py  fapello.py  (+108 more)
cyberdrop_dl/crawlers/discourse/: __init__.py  _discourse.py  models.py
cyberdrop_dl/crawlers/invision/: __init__.py  _invision.py  bellazon.py
cyberdrop_dl/crawlers/vbulletin/: __init__.py  _vbulletin.py  vipergirls.py
cyberdrop_dl/crawlers/wordpress/: __init__.py  _wordpress.py  bestprettygirl.py  everia.py  models.py
cyberdrop_dl/crawlers/xenforo/: __init__.py  allporncomix.py  bellazon.py  celebforum.py  f95zone.py  leakedmodels.py  nudostar.py  simpcity.py  socialmediagirls.py  titsintops.py  xbunker.py  xenforo.py
cyberdrop_dl/data_structures/: __init__.py  converters.py  hash.py  mediaprops.py  supported_domains.py  types.py  url_objects.py  validators.py
cyberdrop_dl/database/: __init__.py  base.py  transfer.py
cyberdrop_dl/database/tables/: __init__.py  definitions.py  hash.py  history.py  schema.py  temp_referer.py
cyberdrop_dl/dependencies/: __init__.py  _browser_cookie3.py
cyberdrop_dl/dependencies/browser_cookie3/: __init__.py
cyberdrop_dl/downloader/: downloader.py  mega_nz.py
cyberdrop_dl/managers/: args_manager.py  cache_manager.py  client_manager.py  config_manager.py  console_manager.py  db_manager.py  download_manager.py  download_speed_manager.py  flaresolverr.py  hash_manager.py  leaky.py  live_manager.py  log_manager.py  manager.py  mock_manager.py  path_manager.py  progress_manager.py  realdebrid_manager.py  storage_manager.py  token_bucket_manager.py  yaml_manager.py
cyberdrop_dl/managers/real_debrid/: api.py  errors.py
cyberdrop_dl/models/: __init__.py  base_models.py  converters.py  types.py  validators.py
cyberdrop_dl/scraper/: __init__.py  crawler.py  filters.py  jdownloader.py  scrape_mapper.py  scraper.py
cyberdrop_dl/scraper/crawlers/: allporncomix_crawler.py  bellazon_crawler.py  bestprettygirl_crawler.py  bunkrr_albums_io_crawler.py  bunkrr_crawler.py  catbox_crawler.py  celebforum_crawler.py  chevereto_crawler.py  coomer_crawler.py  cyberdrop_crawler.py  cyberfile_crawler.py  dailymotion_crawler.py  dirtyship_crawler.py  doodstream_crawler.py  dropbox_crawler.py  e621_crawler.py  ehentai_crawler.py  eightmuses_crawler.py  eporner_crawler.py  erome_crawler.py  f95zone_crawler.py  fapello_crawler.py  fileditch_crawler.py  (+60 more)
cyberdrop_dl/ui/: program_ui.py  textual.py  ui.py
cyberdrop_dl/utils/: aio.py  apprise.py  args.py  changelog.py  check_updates.py  constants.py  converters.py  cookie_extraction.py  cookie_management.py  css.py  dates.py  dumper.py  ffmpeg.py  ffprobe.py  hasher.py  javascript.py  json.py  kvs.py  logger.py  m3u8.py  markdown.py  open_graph.py  sidecard.py  sorting.py  strings.py  text_editor.py  transfer.py  updates.py  utilities.py  validators.py  webhook.py  yaml.py  yt_dlp_manager.py
docs/: README.md  SUMMARY.md  frequently-asked-questions.md  migration-to-cyberdrop-dl-patched.md  simpcity-support-dropped.md  transition-from-v4-to-v5.md  transition-to-v6.md  upgrade.md
docs/getting-started/: README.md  cyberdrop-dl-install.md  cyberdrop-dl-on-android.md
docs/quick-start/: README.md  cyberdrop-dl-install-advanced.md  cyberdrop-dl-install-easy.md  cyberdrop-dl-install.md  python-install-linux.md  python-install-mac.md  python-install-windows.md
docs/reference/: cli-arguments.md  notifications.md  supported-websites.md
scripts/release/: start_linux.sh  start_macOS.command  start_windows.bat
scripts/tools/: check_dependencies_updates.py  filter_logs.py  test_tcp_connections.py  update_docs.py
tests/: conftest.py  test_apprise.py  test_cli.py  test_database.py  test_date_parser.py  test_dns_resolver.py  test_flaresolverr.py  test_hashing.py  test_json.py  test_m3u8.py  test_manager.py  test_real_debrid.py  test_scrape_mapper.py  test_startup.py  test_unicode_emoji_sanitization.py  test_xenforo.py
tests/crawlers/: test_crawlers.py  test_mega_nz.py  test_vbulletin.py  test_xenforo.py  test_xhamster.py
tests/fake_classes/: managers.py
(+140 files in other folders)
