[project]
name = "cyberdrop-dl-patched"
authors = [{name = "Jacob B", email = "admin@script-ware.net"}]
dependencies = [
    "aiodns >=3.5.0",
    "aiofiles >=25.1.0",
    "aiohttp >=3.13.0",
    "aiohttp-client-cache ==0.13.0",
    "aiolimiter >=1.2.1",
    "aiosqlite==0.17.0",
    "apprise >=1.9.5",
    "asyncpraw >=7.8.1",
    "beautifulsoup4 >=4.14.2",
    "certifi >=2025.10.5",
    "curl-cffi >=0.13; implementation_name == 'cpython' ",
    "dateparser >=1.2.2",
    "get-video-properties >=0.1.1",
    "inquirerpy >=0.3.4",
    "jeepney >=0.9.0; 'bsd' in sys_platform or sys_platform == 'linux'",
    "m3u8 >=6.0.0",
    "myjdapi >=1.1.10",
    "packaging >=25.0",
    "pillow >=11.3.0",
    "propcache >=0.4.1",
    "psutil >=7.1.0",
    "pycares >=4.10.0",
    "pycryptodome >=3.23.0",
    "pydantic >=2.12.1",
    "pyyaml >=6.0.2",
    "rich >=14.2.0",
    "send2trash >=1.8.3",
    "truststore >=0.10.4",
    "xxhash >=3.6.0",
    "yarl >=1.22.0"
]
description = "Bulk downloader for multiple file hosts"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11,<4"
version = "8.3.0"

[project.scripts]
cyberdrop-dl = "cyberdrop_dl.main:main"
cyberdrop-dl-patched = "cyberdrop_dl.main:main"

[project.urls]
Changelog = "https://github.com/jbsparrow/CyberDropDownloader/blob/master/CHANGELOG.md"
Documentation = "https://script-ware.gitbook.io/cyberdrop-dl/"
Repository = "https://github.com/jbsparrow/CyberDropDownloader"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "py-markdown-table>=1.3.0",
    "ruff>=0.14.0",
    "tox>=4.28.0"
]
test = [
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock",
    "pytest>=8.4.1"
]

[tool.coverage.report]
exclude_also = [
    '@(abc\.)?abstractmethod',
    'class .*\bProtocol\):',
    'if __name__ == .__main__.:',
    'if env.DEBUG_VAR:',
    'if TYPE_CHECKING:'
]

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.poetry]
include = ["CHANGELOG.md"]
packages = [{include = "cyberdrop_dl"}]
requires-poetry = ">=2.2.0"

[tool.pytest.ini_options]
addopts = ["-s"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Proactor event loop does not implement add_reader:UserWarning"
]
markers = [
    "crawler_test_case: tests that do full run with a crawler (making actual network requests)"
]
minversion = "8.4.1"

[tool.ruff]
exclude = ["cyberdrop_dl/dependencies/_browser_cookie3.py"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "ASYNC",  # async calls that do not await anything or use blocking methods
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "COM8",  # flake8-commas linter
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "FA102",  # future annotations
    "FURB188",  # slice-to-remove-prefix-or-suffix
    "I",  # isort
    "N",  # PEP8 naming conventions
    "PLR1716",  # boolean chained comparison
    "PTH",  # use pathlib instead of os
    "Q",  # flake8-quotes
    "RUF",  # RUF specific fixes
    "T20",  # flake8-print
    "TC",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W"  # pycodestyle warnings
]
extend-safe-fixes = [
    "TC"  # move import from and to TYPE_CHECKING blocks
]
ignore = [
    "COM812",  # missing-trailing-comma
    "E501",  # suppress line-too-long, let formatter decide
    "N806"  # uppercase variables in functions
]
unfixable = [
    "ERA"  # do not autoremove commented out code
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = [
    "E402",  # imports not at the top of the file.
    "T20"  # flake8-print
]
"__init__.py" = ["E402"]  # imports not at the top of the file.

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
sort_first = ["name", "project", "select"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
